--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,3 @@
 ## Get in touch
 
-Visit [my website](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) or find me on other platforms: [Twitter](https://www.twitter.com/lekoarts_de) & [LinkedIn](https://www.linkedin.com/in/lennart-joergens/)
+Visit [My GitHub](https://github.com/jgiang15) or find me on other platforms: [LinkedIn](https://www.linkedin.com/in/joshgiang/) or my Resume: [Resume](https://docs.google.com/document/d/14xtvBawPrpoeZbofpQM1frHXQn4-hR_AP4JiQ_afbes/edit?usp=sharing)
