--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,5 @@
 ## About
 
-> The English language can not fully capture the depth and complexity of my thoughts. So I'm incorporating Emoji into my speech to better express myself. Winky face.
+> My name is Joshua. I have a passion for creative design and functional solutions for users, with a drive for taking on challenges. My past experiences have shaped me to where I am today. Through those experiences I was able to gain effective communication, time management and multitasking, where I am able to transfer those skills to future endeavors.
 
-You know the way you feel when you see a picture of two otters holding hands? That's how you're gonna feel every day. My mother cried the day I was born because she knew she’d never be prettier than me. You should make me your campaign manager. I was born for politics. I have great hair and I love lying. Captain? The kids want to know where Paulie the Pigeon is. I told them he got sucked up into an airplane engine, is that all right?
+Graduate of General Assembly's Software Engineering Immersive course program which included 420 hours and 12 weeks of training to build full-stack web applications. This was achieved with Javascript, Express, React, Postgresql, HTML, CSS and sql
